--- a/NienTaiHo.html
+++ b/NienTaiHo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- Web icon & title -->
-	<title>NienTai Ho</title>
+	<title>Nientai Ho</title>
 	<link rel="shortcut icon" href="images/HDMMHNT.jpg"/>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,45 +20,44 @@
 	
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+</head>
+
+<body>
 	<!-- Header design from here -->
 	<nav class="navbar navbar-custom">
 	  <div class="container-fluid">
 	    <ul class="nav navbar-nav">
-	        <li><a href="#" id="NienTaiHo">NienTaiHo</a></li>            
 	        <li><a href="#AboutMe">AboutMe</a></li>	
 	    </ul>
 
 	    <ul class="nav navbar-nav navbar-right">
 	        <li><a href="#Contact">Contact</a></li>
-	        <li><a href="http://tommy--games.blogspot.com/">MyGameBlog</a></li>  
+	        <li><a href="http://tommy--games.blogspot.com/">GameBlog</a></li>  
 	        <li>
 	        		<a href class="#" class="dropdown-toggle" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 	  					<span class="glyphicon glyphicon-menu-hamburger"></span>
 					<ul class="dropdown-menu" aria-labelledby="dropdownMenu">
-					    <li><a href="https://www.facebook.com/hntddt1"><i class="fa fa-facebook fa-2x" style="color:#3b5998"></i> FaceBook</a></li>
+					    <li><a href="https://www.facebook.com/nientaiho"><i class="fa fa-facebook fa-2x" style="color:#3b5998"></i></a></li>
 
-					    <li><a href="https://plus.google.com/u/0/+hntddt1"><i class="fa fa-google-plus fa-2x" style="color:#d34836"></i> GooglePlus</a></li>
+					    <li><a href="https://plus.google.com/u/0/+hntddt1"><i class="fa fa-google-plus fa-2x" style="color:#d34836"></i></a></li>
 
-					    <li><a href="https://twitter.com/hntddt1"><i class="fa fa-twitter fa-2x" style="color:#0084b4"></i> Twitter</a></li>
+					    <li><a href="https://twitter.com/hntddt1"><i class="fa fa-twitter fa-2x" style="color:#0084b4"></i></a></li>
 
-					    <li><a href="https://www.linkedin.com/in/nientaiho"><i class="fa fa-linkedin fa-2x" style="color:#0084b4"></i> LinkedIn</a></li>
+					    <li><a href="https://www.linkedin.com/in/nientaiho"><i class="fa fa-linkedin fa-2x" style="color:#0084b4"></i></a></li>
 					</ul>
 			</li>
 	    </ul>
 	    </div>
 	</nav>
-
-</head>
-<body>
 	<div class="bg">
 		<div class="overlay">
-			<div class="container" style="min-height: 600px;">
+			<div class="container">
 				<!-- Top Section-->
 				<!-- First Row-->
 				<div class="row">
 					<div class="col-md-6">
-						<h1 style="color: white">Hello, My name is NienTai Ho</h1>
-						<h4 style="color: white">I love the world of cutting edge techology in a world of wonder</h4>
+						<h1 style="color: white">Hello, My name is Nientai Ho</h1>
+						<h4 style="color: white"><blockquote>Love the world of cutting edge technology in a world of wonder</blockquote></h4>
 					</div>
 					<div class="col-md-4">
 					</div>
@@ -70,7 +69,7 @@
 					<div class="col-md-4">
 					</div>
 					<div class="col-md-4">
-						<img src="images/myWebPic.jpg" alt="MyPic" class="img-circle center-block" width="100%" height="100%">
+						<img src="images/myWebPic.jpg" alt="MyPic" class="img-circle center-block img-responsive">
 					</div>
 					<div class="col-md-4">
 					</div>
@@ -81,10 +80,12 @@
 		</div>
 	</div>
 	<!-- AboutMe Section-->
-	<div class="container" style="min-height: 600px;">
+	<div class="container">
 		<div class="col-md-4">
-			<h3 id="AboutMe">Something About Me</h3>
-			<h4>I learned HTML and CSS myself. Currently an university student major in computer science in US. Love all kinds of technology. Studying in different programming languages (C++,Python). Also know how to assemble desktop by parts</h4>
+			<h3 id="AboutMe">About Me</h3>
+			<p>
+				Currently an university student major in computer science in US. Love all kinds of technology. Studying in different programming languages (C++, Python, Swift) and know how to assemble desktop by parts
+			</p>	
 			<h3>Skills (Scale "F"ail to "S"uper)</h3>
 			<h4>C++</h4>
 			<div class="progress">
@@ -100,7 +101,7 @@
 			  	B
 				</div>
 			</div>
-			<h4>Stock Exchange</h4>
+			<h4>Swift</h4>
 			<div class="progress">
 			  	<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
 			  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -118,44 +119,48 @@
 			<div class="progress">
 			  	<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
 			  	aria-valuemin="0" aria-valuemax="100" style="width:100%">
-			  	S
+			  	S+
 				</div>
 			</div>
-			<h4>Keyword Search</h4>
-			<div class="progress">
-			  	<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-			  	aria-valuemin="0" aria-valuemax="100" style="width:100%">
-			  	S
-				</div>
-			</div>
-			
 		</div>
 		<div class="col-md-4">
-			<h3>What I love</h3>
-			
+			<h3>What I love to do</h3>
 			<h4>Finance</h4>
-			<h5>StockMarket</h5>
-			<h5>GoogleFinance</h5>
+			<ul>
+				<li><p>Stock Market</p></li>
+				<li><p>Google Finance</p></li>
+			</ul>
 
-			<h4>VideoGames</h4>
-			<h5>Half-Life</h5>
-			<h5>Portal</h5>
-			<h5>Metal Gear Solid</h5>
-		
+			<h4>Video Games</h4>
+			<ul>
+				<li><p>Half-Life</p></li>
+				<li><p>Portal</p></li>
+				<li><p>Metal Gear Solid</p></li>
+				<p>Check my blog for more at top right corner...</p></li>
+			</ul>
+
+			<h4>Movie & Animations</h4>
+			<ul>
+				<li><p>Galaxy Express 999</p></li>
+				<li><p>Space Brother</p></li>
+				<li><p>Cowboy Bebop</p></li>
+				<li><p>Ghost in the Shell</p></li>
+			</ul>
 		</div>
 		<div class="col-md-4">
 			<h3>Who Influenced Me</h3>
-			<h4>YenChiHo (A.K.A My brother)</h4>
-			<h4>Elon Musk</h4>
+			<p>Yenchi Ho (A.K.A My brother)</p>
+			<p>Elon Musk</p>
 		</div>
 	</div>
 
 <!-- Project Section-->
 	<div class="bg2">
-		<div class="container" style="min-height: 600px;">
+		<div class="container"">
 			<div class="col-md-4">
-				<h3 id="Projects">Projects</h3>
+				<h3 id="Projects">Personal Projects</h3>
 				<h4>Stock Anaylsis With Python</h4>
+				<h4>Repair Report app With Swift</h4>
 			</div>
 			<div class="col-md-4">
 				<h3></h3>
@@ -168,7 +173,7 @@
 	</div>
 	<!-- Contact Section-->
 	<div class="bg1">
-		<div class="container" style="min-height: 600px;">
+		<div class="container">
 			<div class="col-md-4">
 				<h3 id="Contact">Contact Info</h3>
 				<h4><a href="mailto:hntddt123@gmail.com"><span class="glyphicon glyphicon-envelope">:hntddt123@gmail.com</span></a></h4>
@@ -197,9 +202,9 @@
 	      					<input type="subject" class="form-control" name="subject" placeholder="Subject">
 	    				</div>
 	    			</div>
-					<label for="comment">Comment:</label>
+					 <label for="comment">Comment:</label>
 					<textarea class="form-control" rows="5" id="comment"></textarea>
-					 <input type="submit" name="send" value="send">
+					 <!-- <input type="submit" name="send" value="send"> -->
 				 </fieldset>
 				</form>
 				Under Construction!
@@ -208,12 +213,12 @@
 	</div>
 
 	<!-- Footer Section-->
-	<div class="container" style="min-height: 60px;">
+	<div class="container">
 		<div class="col-md-5">
-		<h4>© Copyright 2016, NienTai Ho</h4>
+		<h4>© Copyright 2018, Nientai Ho</h4>
 		</div>
 		<div class="col-md-2">
-		<a href="#NienTaiHo" class="btn btn-info" style="width:70%"  ><span class="glyphicon glyphicon-menu-up"></span></a>
+		<a href="#" class="btn btn-info" style="width:70%"  ><span class="glyphicon glyphicon-menu-up"></span></a>
 		</div>
 		<div class="col-md-offset-9">
 		<h4>Dream is your future reality</h4>
