--- a/NienTaiHo.html
+++ b/NienTaiHo.html
@@ -4,7 +4,7 @@
 	<!-- Web icon & title -->
 	<title>Nientai Ho</title>
 	<link rel="shortcut icon" href="images/HDMMHNT.jpg"/>
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- CSS -->
 	<!-- Latest compiled and minified CSS -->
@@ -26,26 +26,25 @@
 	<!-- Header design from here -->
 	<nav class="navbar navbar-custom">
 	  <div class="container-fluid">
-	    <ul class="nav navbar-nav">
-	        <li><a href="#AboutMe">AboutMe</a></li>	
-	    </ul>
-
-	    <ul class="nav navbar-nav navbar-right">
+	  	<ul class="nav navbar-nav pull-left">
+	  		<li><a>Nientai Ho</a></li>
+	  	</ul>
+	    <ul class="nav navbar-nav pull-right">
 	        <li><a href="#Contact">Contact</a></li>
 	        <li><a href="http://tommy--games.blogspot.com/">GameBlog</a></li>  
-	        <li>
-	        		<a href class="#" class="dropdown-toggle" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-	  					<span class="glyphicon glyphicon-menu-hamburger"></span>
-					<ul class="dropdown-menu" aria-labelledby="dropdownMenu">
-					    <li><a href="https://www.facebook.com/nientaiho"><i class="fa fa-facebook fa-2x" style="color:#3b5998"></i></a></li>
-
-					    <li><a href="https://plus.google.com/u/0/+hntddt1"><i class="fa fa-google-plus fa-2x" style="color:#d34836"></i></a></li>
-
-					    <li><a href="https://twitter.com/hntddt1"><i class="fa fa-twitter fa-2x" style="color:#0084b4"></i></a></li>
-
-					    <li><a href="https://www.linkedin.com/in/nientaiho"><i class="fa fa-linkedin fa-2x" style="color:#0084b4"></i></a></li>
+	        <li class="nav-item dropdown pull-right" >
+	        		<a href class="#" class="nav-link dropdown-toggle" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	  					<span class="glyphicon glyphicon-menu-hamburger"></span></a>
+					    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+					    	<a class=dropdown-item href="https://www.facebook.com/nientaiho"><i class="fa fa-facebook fa-2x" style="color:#3b5998"></i></a>
+					    	<a class=dropdown-item href="https://plus.google.com/u/0/+hntddt1"><i class="fa fa-google-plus fa-2x" style="color:#d34836"></i></a>
+					    	<a class=dropdown-item href="https://twitter.com/hntddt1"><i class="fa fa-twitter fa-2x" style="color:#0084b4"></i></a>
+					    	<a class=dropdown-item href="https://www.linkedin.com/in/nientaiho"><i class="fa fa-linkedin fa-2x" style="color:#0084b4"></i></a>
+					    </div>
 					</ul>
 			</li>
+	    </ul>
+	    <ul class="nav navbar-nav pull-right">
 	    </ul>
 	    </div>
 	</nav>
@@ -82,11 +81,11 @@
 	<!-- AboutMe Section-->
 	<div class="container">
 		<div class="col-md-4">
-			<h3 id="AboutMe">About Me</h3>
+			<h3 id="AboutMe">👨‍💻About Me</h3>
 			<p>
 				Currently an university student major in computer science in US. Love all kinds of technology. Studying in different programming languages (C++, Python, Swift) and know how to assemble desktop by parts
 			</p>	
-			<h3>Skills (Scale "F"ail to "S"uper)</h3>
+			<h3>🔬Skills ("F"ail to "S"uper)</h3>
 			<h4>C++</h4>
 			<div class="progress">
 			  	<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
@@ -124,22 +123,21 @@
 			</div>
 		</div>
 		<div class="col-md-4">
-			<h3>What I love to do</h3>
-			<h4>Finance</h4>
+			<h3>❤️What I love to do</h3>
+			<h4>📈Finance</h4>
 			<ul>
 				<li><p>Stock Market</p></li>
 				<li><p>Google Finance</p></li>
 			</ul>
 
-			<h4>Video Games</h4>
+			<h4>🎮Video Games</h4>
 			<ul>
-				<li><p>Half-Life</p></li>
-				<li><p>Portal</p></li>
-				<li><p>Metal Gear Solid</p></li>
+				<li><p>Half-Life series</p></li>
+				<li><p>Metal Gear Solid series</p></li>
 				<p>Check my blog for more at top right corner...</p></li>
 			</ul>
 
-			<h4>Movie & Animations</h4>
+			<h4>🎞Movie & Animations</h4>
 			<ul>
 				<li><p>Galaxy Express 999</p></li>
 				<li><p>Space Brother</p></li>
@@ -148,7 +146,7 @@
 			</ul>
 		</div>
 		<div class="col-md-4">
-			<h3>Who Influenced Me</h3>
+			<h3>💪Who Influenced Me</h3>
 			<p>Yenchi Ho (A.K.A My brother)</p>
 			<p>Elon Musk</p>
 		</div>
@@ -158,7 +156,7 @@
 	<div class="bg2">
 		<div class="container"">
 			<div class="col-md-4">
-				<h3 id="Projects">Personal Projects</h3>
+				<h3 id="Projects">🛠Personal Projects</h3>
 				<h4>Stock Anaylsis With Python</h4>
 				<h4>Repair Report app With Swift</h4>
 			</div>
@@ -175,53 +173,26 @@
 	<div class="bg1">
 		<div class="container">
 			<div class="col-md-4">
-				<h3 id="Contact">Contact Info</h3>
-				<h4><a href="mailto:hntddt123@gmail.com"><span class="glyphicon glyphicon-envelope">:hntddt123@gmail.com</span></a></h4>
+				<h3 id="Contact">📇Contact Info</h3>
+				<h4><a href="mailto:hntddt123@gmail.com"><span class="glyphicon glyphicon-envelope">hntddt123@gmail.com</span></a></h4>
 				<h4><span class="glyphicon glyphicon-phone">469-264-6059</span></h4>
 				</div>
 			<div class="col-md-8">
-				<!-- Form -->
-				<form method="form-horizontal" role="form" method="post" action="contact.php">
-				 <fieldset>
-					<div class="form-group row">
-	   					<label for="inputName" class="col-sm-4 form-control-label">Name</label>
-	    				<div class="col-sm-10">
-	      					<input type="name" class="form-control" name="name" placeholder="Name">
-	    				</div>
-	    			</div>
 
-	    			<div class="form-group row">
-	   					<label for="inputEmail" class="col-sm-4 form-control-label">Email</label>
-	    				<div class="col-sm-10">
-	      					<input type="email" class="form-control" name="email" placeholder="Email">
-	    				</div>
-	    			</div>
-	    			<div class="form-group row">
-	   					<label for="inputEmail" class="col-sm-4 form-control-label">Subject</label>
-	    				<div class="col-sm-10">
-	      					<input type="subject" class="form-control" name="subject" placeholder="Subject">
-	    				</div>
-	    			</div>
-					 <label for="comment">Comment:</label>
-					<textarea class="form-control" rows="5" id="comment"></textarea>
-					 <!-- <input type="submit" name="send" value="send"> -->
-				 </fieldset>
-				</form>
-				Under Construction!
 			</div>
 		</div>
 	</div>
 
 	<!-- Footer Section-->
 	<div class="container">
-		<div class="col-md-5">
-		<h4>© Copyright 2018, Nientai Ho</h4>
+		<div class="col-xs-4">
+			<h4>&copy; Copyright 2018, Nientai Ho</h4>
 		</div>
-		<div class="col-md-2">
-		<a href="#" class="btn btn-info" style="width:70%"  ><span class="glyphicon glyphicon-menu-up"></span></a>
+		<div class="col-xs-4" align="center">
+			<a href="#" class="btn btn-success"><span class="glyphicon glyphicon-menu-up"></span></a>
 		</div>
-		<div class="col-md-offset-9">
-		<h4>Dream is your future reality</h4>
+		<div class="col-xs-4" align="right">
+			<h4>Dream is your future reality</h4>
 		</div>
 	</div>
 </body>
