--- a/NienTaiHo.html
+++ b/NienTaiHo.html
@@ -25,28 +25,34 @@
 <body>
 	<!-- Header design from here -->
 	<nav class="navbar navbar-custom">
-	  <div class="container-fluid">
-	  	<ul class="nav navbar-nav pull-left">
-	  		<li><a>Nientai Ho</a></li>
-	  	</ul>
-	    <ul class="nav navbar-nav pull-right">
-	        <li><a href="#Contact">Contact</a></li>
-	        <li><a href="http://tommy--games.blogspot.com/">GameBlog</a></li>  
-	        <li class="nav-item dropdown pull-right" >
-	        		<a href class="#" class="nav-link dropdown-toggle" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	  					<span class="glyphicon glyphicon-menu-hamburger"></span></a>
-					    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-					    	<a class=dropdown-item href="https://www.facebook.com/nientaiho"><i class="fa fa-facebook fa-2x" style="color:#3b5998"></i></a>
-					    	<a class=dropdown-item href="https://plus.google.com/u/0/+hntddt1"><i class="fa fa-google-plus fa-2x" style="color:#d34836"></i></a>
-					    	<a class=dropdown-item href="https://twitter.com/hntddt1"><i class="fa fa-twitter fa-2x" style="color:#0084b4"></i></a>
-					    	<a class=dropdown-item href="https://www.linkedin.com/in/nientaiho"><i class="fa fa-linkedin fa-2x" style="color:#0084b4"></i></a>
-					    </div>
-					</ul>
-			</li>
-	    </ul>
-	    <ul class="nav navbar-nav pull-right">
-	    </ul>
-	    </div>
+		<div class="container-fluid">
+	  		<ul class="nav navbar-nav pull-left">
+	  			<li><a>Nientai Ho</a></li>
+	  		</ul>
+	  		<!-- Dropdown menu -->
+	  		<ul class="nav navbar-nav pull-right">
+	  			<li>
+	  				<a href="#Contact">Contact</a>
+	  			</li>
+	  			<li>
+	  				<a href="http://tommy--games.blogspot.com/">GameBlog</a>
+	  			</li>  
+	  			<li class="nav-item dropdown pull-right" >
+	  				<a href class="#" class="nav-link dropdown-toggle" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	  					<span class="glyphicon glyphicon-menu-hamburger"></span>
+	  				</a>
+	  				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+	  					<a class="dropdown-item" href="https://www.facebook.com/nientaiho"><i class="fa fa-facebook fa-2x" style="color:#3b5998"></i></a>
+	  					<div class="divider"></div>
+	  					<a class="dropdown-item" href="https://plus.google.com/u/0/+hntddt1"><i class="fa fa-google-plus fa-2x" style="color:#d34836"></i></a>
+	  					<div class="divider"></div>
+	  					<a class="dropdown-item" href="https://twitter.com/hntddt1"><i class="fa fa-twitter fa-2x" style="color:#0084b4"></i></a>
+	  					<div class="divider"></div>
+	  					<a class="dropdown-item" href="https://www.linkedin.com/in/nientaiho"><i class="fa fa-linkedin fa-2x" style="color:#0084b4"></i></a>
+	  				</div>
+	  			</li>
+	  		</ul>
+    	</div>
 	</nav>
 	<div class="bg">
 		<div class="overlay">
