--- a/NienTaiHo.html
+++ b/NienTaiHo.html
@@ -163,8 +163,8 @@
 		<div class="container"">
 			<div class="col-md-4">
 				<h3 id="Projects">🛠Personal Projects</h3>
-				<h4>Stock Anaylsis With Python</h4>
 				<h4>Repair Report app With Swift</h4>
+				<p>Building a simple yet good looking repair form for mobile user to fill out the form quickly</p>				
 			</div>
 			<div class="col-md-4">
 				<h3></h3>
