Update dropdown style

--- a/NientaiHo.html
+++ b/NientaiHo.html
@@ -145,10 +145,11 @@
 
 			<h4>🎞Movie & Animations</h4>
 			<ul>
-				<li><p>Galaxy Express 999</p></li>
-				<li><p>Space Brother</p></li>
 				<li><p>Cowboy Bebop</p></li>
+				<li><p>Galaxy Express 999</p></li>
 				<li><p>Ghost in the Shell</p></li>
+				<li><p>Space Brother</p></li>
+				<li><p>Studio Ghibli</p></li>
 			</ul>
 		</div>
 		<div class="col-md-4">
