--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- Web icon & title -->
 	<title>Nientai Ho</title>
-	<link rel="shortcut icon" href="images/Taipei.jpg"/>
+	<link rel="shortcut icon" href="images/HDMMHNT.jpg"/>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- CSS -->
