--- a/index.html
+++ b/index.html
@@ -79,127 +79,125 @@
 					<div class="col-md-4">
 					</div>
 				</div>
-
-
 			</div>
 		</div>
 	</div>
 	<!-- AboutMe Section-->
 	<div class="container">
-		<div class="col-md-4">
-			<h3 id="AboutMe">👨‍💻About Me</h3>
-			<p>
-				Currently an university student major in computer science in US. Love all kinds of technology. Studying in different programming languages (C++, Python, Swift) and know how to assemble desktop by parts
-			</p>	
-			<h3>🔬Skills ("F"ail to "S"uper)</h3>
-			<h4>C++</h4>
-			<div class="progress">
-			  	<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-			  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
-			  	B+
+		<div class="row">
+			<div class="col-md-4">
+				<h3 id="AboutMe">👨‍💻About Me</h3>
+				<p>
+					Currently an university student major in computer science in US. Love all kinds of technology. Studying in different programming languages (C++, Python, Swift) and know how to assemble desktop by parts
+				</p>	
+				<h3>🔬Skills ("F"ail to "S"uper)</h3>
+				<h4>C++</h4>
+				<div class="progress">
+			  		<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+			  		aria-valuemin="0" aria-valuemax="100" style="width:75%">
+			  		B+
+					</div>
+				</div>
+				<h4>Python</h4>
+				<div class="progress">
+			  		<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+			  		aria-valuemin="0" aria-valuemax="100" style="width:70%">
+			  		B
+					</div>
+				</div>
+				<h4>Swift</h4>
+				<div class="progress">
+			  		<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+			  		aria-valuemin="0" aria-valuemax="100" style="width:70%">
+			  		B
+					</div>
+				</div>
+				<h4>English</h4>
+				<div class="progress">
+			  		<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+			  		aria-valuemin="0" aria-valuemax="100" style="width:90%">
+			  		A+
+					</div>
+				</div>
+				<h4>Chinese</h4>
+				<div class="progress">
+			  		<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+			  		aria-valuemin="0" aria-valuemax="100" style="width:100%">
+			  		S+
+					</div>
 				</div>
 			</div>
-			<h4>Python</h4>
-			<div class="progress">
-			  	<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-			  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-			  	B
-				</div>
+			<div class="col-md-4">
+				<h3>❤️What I love to do</h3>
+				<h4>📈Finance</h4>
+				<ul>
+					<li><p>Stock Market</p></li>
+					<li><p>Google Finance</p></li>
+				</ul>
+				<h4>🎮Video Games</h4>
+				<ul>
+					<li><p>Half-Life series</p></li>
+					<li><p>Metal Gear Solid series</p></li>
+					<p>Check my blog for more at top right corner...</p></li>
+				</ul>
+				<h4>🎞Movie & Animations</h4>
+				<ul>
+					<li><p>Cowboy Bebop</p></li>
+					<li><p>Galaxy Express 999</p></li>
+					<li><p>Ghost in the Shell</p></li>
+					<li><p>Space Brother</p></li>
+					<li><p>Studio Ghibli</p></li>
+				</ul>
 			</div>
-			<h4>Swift</h4>
-			<div class="progress">
-			  	<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-			  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-			  	B
-				</div>
+			<div class="col-md-4">
+				<h3>💪Who Influenced Me</h3>
+				<p>Yenchi Ho (A.K.A My brother)</p>
+				<p>Elon Musk</p>
 			</div>
-			<h4>English</h4>
-			<div class="progress">
-			  	<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-			  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-			  	A+
-				</div>
-			</div>
-			<h4>Chinese</h4>
-			<div class="progress">
-			  	<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-			  	aria-valuemin="0" aria-valuemax="100" style="width:100%">
-			  	S+
-				</div>
-			</div>
-		</div>
-		<div class="col-md-4">
-			<h3>❤️What I love to do</h3>
-			<h4>📈Finance</h4>
-			<ul>
-				<li><p>Stock Market</p></li>
-				<li><p>Google Finance</p></li>
-			</ul>
-
-			<h4>🎮Video Games</h4>
-			<ul>
-				<li><p>Half-Life series</p></li>
-				<li><p>Metal Gear Solid series</p></li>
-				<p>Check my blog for more at top right corner...</p></li>
-			</ul>
-
-			<h4>🎞Movie & Animations</h4>
-			<ul>
-				<li><p>Cowboy Bebop</p></li>
-				<li><p>Galaxy Express 999</p></li>
-				<li><p>Ghost in the Shell</p></li>
-				<li><p>Space Brother</p></li>
-				<li><p>Studio Ghibli</p></li>
-			</ul>
-		</div>
-		<div class="col-md-4">
-			<h3>💪Who Influenced Me</h3>
-			<p>Yenchi Ho (A.K.A My brother)</p>
-			<p>Elon Musk</p>
 		</div>
 	</div>
 
 <!-- Project Section-->
 	<div class="bg2">
 		<div class="container"">
-			<div class="col-md-4">
-				<h3 id="Projects">🛠Personal Projects</h3>
-				<h4>Repair Report app With Swift</h4>
-				<p>Building a simple yet good looking repair form for mobile user to fill out the form quickly</p>				
-			</div>
-			<div class="col-md-4">
-				<h3></h3>
-				<h4></h4>
-			</div>
-			<div class="col-md-4">
-				<h3></h3>
+			<div class="row">
+				<div class="col-md-4">
+					<h3 id="Projects">🛠Personal Projects</h3>
+					<h4>Repair Report app With Swift</h4>
+					<p>Building a simple yet good looking repair form for mobile user to fill out the form quickly</p>				
+				</div>
+				<div class="col-md-4">
+				</div>
+				<div class="col-md-4">
+				</div>
 			</div>
 		</div>
 	</div>
 	<!-- Contact Section-->
 	<div class="bg1">
 		<div class="container">
-			<div class="col-md-4">
-				<h3 id="Contact">📇Contact Info</h3>
-				<h4><a href="mailto:hntddt123@gmail.com"><span class="glyphicon glyphicon-envelope">hntddt123@gmail.com</span></a></h4>
-				<h4><span class="glyphicon glyphicon-phone">469-264-6059</span></h4>
+			<div class="row">
+				<div class="col-md-12">
+					<h3 id="Contact">📇Contact Info</h3>
+					<h4><a href="mailto:hntddt123@gmail.com"><span class="glyphicon glyphicon-envelope">hntddt123@gmail.com</span></a></h4>
+					<h4><span class="glyphicon glyphicon-phone">469-264-6059</span></h4>
 				</div>
-			<div class="col-md-8">
-
 			</div>
 		</div>
 	</div>
 
 	<!-- Footer Section-->
 	<div class="container">
-		<div class="col-xs-4">
-			<h5>&copy; Copyright 2018, Nientai Ho</h4>
-		</div>
-		<div class="col-xs-4" align="center">
-			<a href="#" class="btn btn-success"><span class="glyphicon glyphicon-menu-up"></span></a>
-		</div>
-		<div class="col-xs-4" align="right">
-			<h5>Dream is your future reality</h4>
+		<div class="row">
+			<div class="col-xs-4">
+				<h5>&copy; Copyright 2018, Nientai Ho</h5>
+			</div>
+			<div class="col-xs-4" align="center">
+				<a href="#" class="btn btn-success"><span class="glyphicon glyphicon-menu-up"></span></a>
+			</div>
+			<div class="col-xs-4" align="right">
+				<h5>Dream is your future reality</h5>
+			</div>
 		</div>
 	</div>
 </body>
