--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
 			<div class="col-xs-4">
 				<h5>&copy; Copyright 2018, Nientai Ho</h5>
 			</div>
-			<div class="col-xs-4" align="center">
+			<div class="col-xs-4 text-center">
 				<a href="#" class="btn btn-success"><span class="glyphicon glyphicon-menu-up"></span></a>
 			</div>
-			<div class="col-xs-4" align="right">
+			<div class="col-xs-4 text-right">
 				<h5>Dream is your future reality</h5>
 			</div>
 		</div>
