--- a/index.html
+++ b/index.html
@@ -134,12 +134,6 @@
 					<li><p>Stock Market</p></li>
 					<li><p>Google Finance</p></li>
 				</ul>
-				<h4>🎮Video Games</h4>
-				<ul>
-					<li><p>Half-Life series</p></li>
-					<li><p>Metal Gear Solid series</p></li>
-					<p>Check my blog for more at top right corner...</p></li>
-				</ul>
 				<h4>🎞Movie & Animations</h4>
 				<ul>
 					<li><p>Cowboy Bebop</p></li>
@@ -147,6 +141,14 @@
 					<li><p>Ghost in the Shell</p></li>
 					<li><p>Space Brother</p></li>
 					<li><p>Studio Ghibli</p></li>
+				</ul>
+				<h4>🗺Traveling</h4>
+				<img src="images/Houston.jpg" class="img-thumbnail float-left" alt="Houston" title="Houston">
+				<h4>🎮Video Games</h4>
+				<ul>
+					<li><p>Half-Life series</p></li>
+					<li><p>Metal Gear Solid series</p></li>
+					<p>Check my blog for more at top right corner...</p></li>
 				</ul>
 			</div>
 			<div class="col-md-4">
