--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	  				<a href="#Contact">Contact</a>
 	  			</li>
 	  			<li>
-	  				<a href="http://tommy--games.blogspot.com/">GameBlog</a>
+	  				<a href="https://nientaigames.blogspot.com/">GameBlog</a>
 	  			</li>  
 	  			<li class="nav-item dropdown pull-right" >
 	  				<a href class="#" class="nav-link dropdown-toggle" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
