--- a/index.html
+++ b/index.html
@@ -88,42 +88,41 @@
 			<div class="col-md-4">
 				<h3 id="AboutMe">👨‍💻About Me</h3>
 				<p>
-					Currently an university student major in computer science in US. Love all kinds of technology. Studying in different programming languages (C++, Python, Swift) and know how to assemble desktop by parts
-				</p>	
+					I am currently an University of Houston student major in computer science. 
+					I Love all kinds of technology and play with it. 
+				</p>
+				<p>
+					75% of me is made out of code
+				</p>
 				<h3>🔬Skills ("F"ail to "S"uper)</h3>
 				<h4>C++</h4>
 				<div class="progress">
 			  		<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
 			  		aria-valuemin="0" aria-valuemax="100" style="width:75%">
-			  		B+
 					</div>
 				</div>
 				<h4>Python</h4>
 				<div class="progress">
 			  		<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
 			  		aria-valuemin="0" aria-valuemax="100" style="width:70%">
-			  		B
 					</div>
 				</div>
 				<h4>Swift</h4>
 				<div class="progress">
 			  		<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
 			  		aria-valuemin="0" aria-valuemax="100" style="width:70%">
-			  		B
 					</div>
 				</div>
 				<h4>English</h4>
 				<div class="progress">
 			  		<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
 			  		aria-valuemin="0" aria-valuemax="100" style="width:90%">
-			  		A+
 					</div>
 				</div>
 				<h4>Chinese</h4>
 				<div class="progress">
 			  		<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
 			  		aria-valuemin="0" aria-valuemax="100" style="width:100%">
-			  		S+
 					</div>
 				</div>
 			</div>
