--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
 			  		aria-valuemin="0" aria-valuemax="100" style="width:75%">
 					</div>
 				</div>
+				<h4>Java</h4>
+				<div class="progress">
+			  		<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+			  		aria-valuemin="0" aria-valuemax="100" style="width:75%">
+					</div>
+				</div>
 				<h4>Python</h4>
 				<div class="progress">
 			  		<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
@@ -110,7 +116,7 @@
 				<h4>Swift</h4>
 				<div class="progress">
 			  		<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-			  		aria-valuemin="0" aria-valuemax="100" style="width:70%">
+			  		aria-valuemin="0" aria-valuemax="100" style="width:72%">
 					</div>
 				</div>
 				<h4>English</h4>
@@ -123,6 +129,12 @@
 				<div class="progress">
 			  		<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
 			  		aria-valuemin="0" aria-valuemax="100" style="width:100%">
+					</div>
+				</div>
+				<h4>Taiwanese</h4>
+				<div class="progress">
+			  		<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+			  		aria-valuemin="0" aria-valuemax="100" style="width:90%">
 					</div>
 				</div>
 			</div>
