--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	  				<a href="https://nientaigames.blogspot.com/">GameBlog</a>
 	  			</li>  
 	  			<li class="nav-item dropdown pull-right" >
-	  				<a class="nav-link dropdown-toggle" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	  				<a href="#" class="nav-link dropdown-toggle" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	  					<span class="glyphicon glyphicon-menu-hamburger"></span>
 	  				</a>
 	  				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
