Fixed twitter link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	  					<div class="divider"></div>
 	  					<a class="dropdown-item" href="https://plus.google.com/u/0/+hntddt1"><i class="fa fa-google-plus fa-2x" style="color:#d34836"></i></a>
 	  					<div class="divider"></div>
-	  					<a class="dropdown-item" href="https://twitter.com/hntddt1"><i class="fa fa-twitter fa-2x" style="color:#0084b4"></i></a>
+	  					<a class="dropdown-item" href="https://twitter.com/NientaiHo"><i class="fa fa-twitter fa-2x" style="color:#0084b4"></i></a>
 	  					<div class="divider"></div>
 	  					<a class="dropdown-item" href="https://www.linkedin.com/in/nientaiho"><i class="fa fa-linkedin fa-2x" style="color:#0084b4"></i></a>
 	  				</div>
