--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<h3 id="Projects">🛠Personal Projects</h3>
-					<h4>Repair Report app With Swift</h4>
+					<h4>Repair Report iOS app with Swift</h4>
 					<p>Building a simple yet good looking repair form for mobile user to fill out the form quickly</p>				
 				</div>
 				<div class="col-md-4">
