Updated personal description

--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
 			<div class="col-md-4">
 				<h3 id="AboutMe">👨‍💻About Me</h3>
 				<p>
-					I am currently an University of Houston student major in computer science. 
-					I Love all kinds of technology and play with it. 
+					I am software developer and I like to know the logic behind the tech. 
 				</p>
 				<p>
 					75% of me is made out of code
