--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-4">
-				<h3 id="AboutMe">👨‍💻About Me</h3>
+				<h3 id="AboutMe">👨‍💻 About Me</h3>
 				<p>
 					I am software developer and I like to know the logic behind the tech. 
 				</p>
 				<p>
 					75% of me is made out of code
 				</p>
-				<h3>🔬Skills ("F"ail to "S"uper)</h3>
+				<h3>🔬Skills</h3>
 				<h4>C++</h4>
 				<div class="progress">
 			  		<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
@@ -97,16 +97,10 @@
 			  		aria-valuemin="0" aria-valuemax="100" style="width:75%">
 					</div>
 				</div>
-				<h4>Python</h4>
+				<h4>Javascript</h4>
 				<div class="progress">
 			  		<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-			  		aria-valuemin="0" aria-valuemax="100" style="width:70%">
-					</div>
-				</div>
-				<h4>Swift</h4>
-				<div class="progress">
-			  		<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-			  		aria-valuemin="0" aria-valuemax="100" style="width:72%">
+			  		aria-valuemin="0" aria-valuemax="100" style="width:90%">
 					</div>
 				</div>
 				<h4>English</h4>
@@ -129,23 +123,19 @@
 				</div>
 			</div>
 			<div class="col-md-4">
-				<h3>❤️What I love to do</h3>
-				<h4>📈Finance</h4>
+				<h3>❤️ What I love to do</h3>
+				<h4>📈 Finance</h4>
 				<ul>
 					<li><p>Stock Market</p></li>
-					<li><p>Google Finance</p></li>
 				</ul>
-				<h4>🎞Movie & Animations</h4>
+				<h4>🎞 Movies & Animations</h4>
 				<ul>
 					<li><p>Cowboy Bebop</p></li>
-					<li><p>Galaxy Express 999</p></li>
 					<li><p>Ghost in the Shell</p></li>
-					<li><p>Space Brother</p></li>
+					<li><p>Planetes</p></li>
 					<li><p>Studio Ghibli</p></li>
 				</ul>
-				<h4>🗺Traveling</h4>
-				<img src="images/Houston.jpg" class="img-thumbnail float-left" alt="Houston" title="Houston">
-				<h4>🎮Video Games</h4>
+				<h4>🎮 Video Games</h4>
 				<ul>
 					<li><p>Half-Life series</p></li>
 					<li><p>Metal Gear Solid series</p></li>
@@ -153,8 +143,9 @@
 				</ul>
 			</div>
 			<div class="col-md-4">
-				<h3>💪Who Influenced Me</h3>
+				<h3>💪 Who Influenced Me</h3>
 				<p>Yenchi Ho (A.K.A My brother)</p>
+				<p>Steve Jobs</p>
 				<p>Elon Musk</p>
 			</div>
 		</div>
@@ -165,7 +156,7 @@
 		<div class="container"">
 			<div class="row">
 				<div class="col-md-4">
-					<h3 id="Projects">🛠Personal Projects</h3>
+					<h3 id="Projects">🛠 Personal Projects</h3>
 					<h4>Repair Report iOS app with Swift</h4>
 					<p>Building a simple yet good looking repair form for mobile user to fill out the form quickly</p>				
 				</div>
@@ -181,9 +172,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h3 id="Contact">📇Contact Info</h3>
-					<h4><a href="mailto:hntddt123@gmail.com"><span class="glyphicon glyphicon-envelope">hntddt123@gmail.com</span></a></h4>
-					<h4><span class="glyphicon glyphicon-phone">469-264-6059</span></h4>
+					<h3 id="Contact">📇 Contact Info</h3>
+					<h4><a href="mailto:nientaiho@gmail.com"><span class="glyphicon glyphicon-envelope">nientaiho@gmail.com</span></a></h4>
 				</div>
 			</div>
 		</div>
@@ -193,7 +183,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-4">
-				<h5>&copy; Copyright 2018, Nientai Ho</h5>
+				<h5>&copy; Copyright 2020, Nientai Ho</h5>
 			</div>
 			<div class="col-xs-4 text-center">
 				<a href="#" class="btn btn-success"><span class="glyphicon glyphicon-menu-up"></span></a>
